[package]
name = "thrussh-keys"
version = "0.20.2"
edition = "2018"
authors = ["Pierre-Étienne Meunier <pe@pijul.org>"]
description = "Deal with SSH keys: load them, decrypt them, call an SSH agent."
keywords = ["ssh"]
repository = "https://nest.pijul.com/pijul/thrussh"
homepage = "https://pijul.org/thrussh"
documentation = "https://docs.rs/thrussh-keys"
license = "Apache-2.0"
include = [
"Cargo.toml",
"src/lib.rs",
"src/pem.rs",
"src/agent/mod.rs",
"src/agent/msg.rs",
"src/agent/server.rs",
"src/agent/client.rs",
"src/bcrypt_pbkdf.rs",
"src/blowfish.rs",
"src/encoding.rs",
"src/format/mod.rs",
"src/format/openssh.rs",
"src/format/pkcs5.rs",
"src/format/pkcs8.rs",
"src/key.rs",
"src/signature.rs"
]

[dependencies]
data-encoding = "2.3"
byteorder = "1.3"
tokio = { version = "1.0", features = [ "io-util", "rt-multi-thread", "time", "net" ] }
futures = "0.3"
cryptovec = "0.6.0"
yasna = { version = "0.3.2", features = [ "bit-vec", "num-bigint" ] }
num-bigint = "0.2"
num-integer = "0.1"
openssl = "0.10"
bit-vec = "0.6"
thrussh-libsodium = "0.2.0"
serde_derive = "1.0"
serde = "1.0"
dirs = "3.0"
log = "0.4"
thiserror = "1.0"

[dev-dependencies]
env_logger = "0.7"
tempdir="0.3"
